Added hover effect

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <div class="img-detailsContainer" >
         <div id="imgHolder"></div>
         <a href="#" target="_main"><div id="plusHolder"></div></a>
+        <div class="name"><h1>Your Name</h1></div>
         <div class="details-container">
           <ul>
             <li>.NET Developer</li>/
@@ -36,10 +37,10 @@ Magnam quaerat sapiente eum exercitationem quisquam quae ea minima vero. Eaque f
         <div class="info-Container">
             <h2>My Projects</h2>
             <div class="box-Container">
-           <div class="box">Project 1</div>
-           <div class="box">Project 2</div>
-           <div class="box">Project 3</div>
-           <div class="box">Project 4</div>
+           <div class="box" id="box1"><span>Project 1</span></div>
+           <div class="box" id="box2"><span>Project 2</span></div>
+           <div class="box" id="box3"><span>Project 3</span></div>
+           <div class="box" id="box4"><span>Project 4</span></div>
           </div>
         </div>
     </main>
